--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ Secondly i would also like to thank my parents who helped me a lot in finalizing
 										<div class="panel-heading" role="tab" id="headingThree">
 											<h4 class="panel-title">
 												<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-													Abstract and Data Analysis
+													Abstract/Logbook/Data Analysis
 												</a>
 											</h4>
 										</div>
@@ -254,6 +254,7 @@ Secondly i would also like to thank my parents who helped me a lot in finalizing
 											<div class="panel-body">
 												<a href="https://www.canva.com/design/DAD9KlLI86w/yKnCDHLk94maK-JQgF4OkA/view?utm_content=DAD9KlLI86w&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"><h6>SURVEY DATA</h6></a>
 												<a href="https://www.canva.com/design/DAD-BmuZBwU/ZzTnI5pId_xhBy4Wqeod2g/view?utm_content=DAD-BmuZBwU&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu"><h6>ABSTRACT</h6></a>
+												<a href="											https://www.canva.com/design/DAEB1PAsIHk/pvajdPOBBipOyH3uC3ySCA/view?utm_content=DAEB1PAsIHk&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton"><h6>LOGBOOK</h6></a>
 											</div>
 										</div>
 									</div>
