--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Secondly i would also like to thank my parents who helped me a lot in finalizing
 										<div class="panel-heading" role="tab" id="headingOne">
 											<h4 class="panel-title">
 												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-													WEBSITES
+													WEBSITES/CERTIFICATION
 												</a>
 											</h4>
 										</div>
@@ -215,6 +215,11 @@ Secondly i would also like to thank my parents who helped me a lot in finalizing
 											<p></p>
 											<a href="http://www.im-creator.com/free/ryzoxbeats/spirituality
 											"><h6>SPIRITUALITY WEBSITE</h6></a>
+											<a href="https://whjr-v2-prod-bucket.s3.ap-south-1.amazonaws.com/2b3b9687-60f6-4737-8682-2fb255f29e8d.pdf"><h6>APP DEVELOPMENT</h6></a>
+											<p>
+											</p>
+											<a href="https://whjr-v2-prod-bucket.s3.ap-south-1.amazonaws.com/469208f7-edbf-407a-b865-6c09bde56718.pdf"><h6>GAME DEVELOPMENT</h6></a>
+											<p></p>
 											</div>
 										</div>
 									</div>
@@ -256,22 +261,8 @@ Secondly i would also like to thank my parents who helped me a lot in finalizing
 												<a href="https://www.canva.com/design/DAD-BmuZBwU/ZzTnI5pId_xhBy4Wqeod2g/view?utm_content=DAD-BmuZBwU&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu"><h6>ABSTRACT</h6></a>
 											</div>
 										</div>
-																			<div class="panel-heading" role="tab" id="headingOne">
-											<h4 class="panel-title">
-												<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-													Certification
-												</a>
-											</h4>
 										</div>
-										<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-											<div class="panel-body">
-												<a href="https://whjr-v2-prod-bucket.s3.ap-south-1.amazonaws.com/2b3b9687-60f6-4737-8682-2fb255f29e8d.pdf"><h6>APP DEVELOPMENT</h6></a>
-											<p>
-											</p>
-											<a href="https://whjr-v2-prod-bucket.s3.ap-south-1.amazonaws.com/469208f7-edbf-407a-b865-6c09bde56718.pdf"><h6>GAME DEVELOPMENT</h6></a>
-											<p></p>
-											</div>
-										</div>
+
 									</div>
 									</div>
 								</div>
