--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="col-sm-12">
 	<h2>ACKNOWLEDGEMENT</h2>
 <p>I would like to express my special thanks of gratitude to my teachers as well as our principal (Mrs. Renu Singh) who gave me the golden opportunity to do this wonderful project, which also helped me in doing a lot of Research and i came to know about so many new things. I am really thankful to them.
-Secondly i would also like to thank my parents who helped me a lot in finalizing this project within the limited time frame.</p>
+Secondly i would also like to thank my parents who helped me a lot in finalizing this project within the limited time frame. Last but not the least, i would like to thank Whitehat jr. through which i learnt the entire coding skills and used them in this particular project.</p>
  	</div>
 	
 			</div>
